--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Unshared
 subtitle: Labs
 email: almost.jason@gmail.com
-description: Advanced account-sharing detection for subscription platforms<br /> Prevent revenue loss and enforce fair, secure usage with a lightweight, fast-to-integrate solution.
+description: Advanced account-sharing detection for subscription platforms. Secure your platform, enforce fair usage, and reclaim lost revenue with a simple, lightweight solution.
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: # the base hostname & protocol for your site
 author:
